load(
    "@io_bazel_rules_kotlin//kotlin:jvm.bzl",
    "kt_jvm_library",
    "kt_jvm_test",
)
load("@rules_spring//springboot:springboot.bzl", "springboot")

deps = [
    "@maven//:org_springframework_boot_spring_boot_starter_webflux",
    "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_reactor",
    "@maven//:com_fasterxml_jackson_module_jackson_module_kotlin",
#    "@maven//:io_springfox_springfox_boot_starter",
]

runtime_deps = [
    "@maven//:org_springframework_boot_spring_boot_loader",
    "@maven//:org_jetbrains_kotlin_kotlin_reflect",
    "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
]

kt_jvm_library(
    name = "backtest_lib",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    plugins = [
        "//common/kotlin:allopen_plugin",
        "//common/kotlin:no_arg_plugin",
        "//common/kotlin:serialization_plugin",
    ],
    resources = glob(["src/main/resources/**/*"]),
    runtime_deps = runtime_deps,
    deps = deps,
)

springboot(
    name = "backtest",
    boot_app_class = "com.exnight.backtest.BacktestAppKt",
    fail_on_duplicate_classes = False,
    java_library = ":backtest_lib",
    deps = deps + runtime_deps,
)

kt_jvm_test(
    name = "test",
    main_class = "org.junit.platform.console.ConsoleLauncher",
    args = [
        "--select-package=com.exnight.backtest",
    ],
    srcs = glob(["src/test/kotlin/**/*.kt"]),
    resources = glob(["src/test/resources/**"]),
    deps = [
        ":backtest_lib",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_jupiter_junit_jupiter_params",
        "@maven//:org_junit_platform_junit_platform_console",
        "@maven//:org_springframework_boot_spring_boot_starter_test",
    ]
)
