load(
    "@io_bazel_rules_kotlin//kotlin:jvm.bzl",
    "kt_jvm_library",
    "kt_jvm_test",
)
load("@rules_java//java:defs.bzl", "java_binary")
load("@rules_spring//springboot:springboot.bzl", "springboot")

deps = [
    "@maven//:org_springframework_spring_core",
    "@maven//:org_springframework_boot_spring_boot_starter_webflux",
    "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_reactor",
    "@maven//:com_fasterxml_jackson_module_jackson_module_kotlin",
    "@maven//:io_springfox_springfox_boot_starter",
]

runtime_deps = [
    "@maven//:org_springframework_boot_spring_boot_loader",
    "@maven//:org_jetbrains_kotlin_kotlin_reflect",
    "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
]

kt_jvm_library(
    name = "backtest_lib",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    plugins = [
        "//other/bazel/kotlin:allopen_plugin",
        "//other/bazel/kotlin:no_arg_plugin",
        #        "//other/bazel/kotlin:serialization_plugin",
    ],
    resources = glob(["src/main/resources/**/*"]),
    runtime_deps = runtime_deps,
    deps = deps + ["util_lib"],
)

java_library(
    name = "util_lib",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**/*"]),
    runtime_deps = runtime_deps,
    deps = deps,
)

springboot(
    name = "backtest_app",
    boot_app_class = "com.exnight.backtest.BacktestAppKt",
    fail_on_duplicate_classes = False,
    java_library = ":backtest_lib",
    deps = deps + runtime_deps,
)

kt_jvm_test(
    name = "test",
    srcs = glob(["src/test/kotlin/**/*.kt"]),
    args = [
        "--select-package=com.exnight.backtest",
    ],
    main_class = "org.junit.platform.console.ConsoleLauncher",
    resources = glob(["src/test/resources/**"]),
    deps = [
        ":backtest_lib",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_jupiter_junit_jupiter_params",
        "@maven//:org_junit_platform_junit_platform_console",
        "@maven//:org_springframework_boot_spring_boot_starter_test",
    ],
)

java_library(
    name = "test_lib_java",
    testonly = 1,
    srcs = glob(["src/test/java/**/*.java"]),
    deps = [
        ":util_lib",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
    ],
)

java_test(
    name = "JavaTests",
    srcs = glob(["src/test/java/**/*.java"]),
    args = [
        "--select-package=com.exnight.backtest",
    ],
    main_class = "org.junit.platform.console.ConsoleLauncher",
    use_testrunner = False,
    runtime_deps = [
        "@maven//:org_junit_platform_junit_platform_console",
        "@maven//:org_junit_platform_junit_platform_suite_api",
    ],
    deps = [
        ":util_lib",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_jupiter_junit_jupiter_params",
        "@maven//:org_junit_platform_junit_platform_suite_api",
    ],
)
